<resources>
    <string name="app_name">Ble_gbData</string>

    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>


    <!-- Menu items -->
    <string name="menu_introduced">错误码相关</string>
    <string name="menu_disconnect_all">断开所有设备</string>
    <string name="menu_connect_all">连接所有设备</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">扫描</string>
    <string name="menu_stop">停止扫描</string>
    <string name="menu_refresh">Refreshing</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>

    <string name="btn_sure">确定</string>
    <string name="btn_cancel">取消</string>

    <string name="ask_permission">请求设备权限</string>

    <string name="lined_num">连接数量:</string>

    <string name="line_success">连接成功</string>
    <string name="line_disconnect">断开连接</string>
    <string name="menu_share">分享</string>
    <string name="menu_contribute">捐助/联系作者</string>
</resources>