<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/ui_textView111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello,Walke!"/>

    <EditText
        android:id="@+id/ui_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your name here"/>

    <Button
        android:id="@+id/ui_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="sayHello"
        android:text="Say hello!"
        android:textAllCaps="false"/>
</LinearLayout>
